--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
-
 .container {
     width: 100%;
     height: 100vh;
@@ -33,37 +32,43 @@ main {
     height: 90%;
     background-color: #1e2d3b;
 }
+.wrapper, .albumContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .wrapper {
     width: 85%;
     height: 100%;
     margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     flex-wrap: wrap;
     overflow-x: auto;
 }
+.albumContainer, .album img {
+    border-radius: 5px;
+}
 .albumContainer {
-    width: calc(100% / 8);
+    width: calc(100% / 7);
     height: 45%;
     background-color:  #2e3a46;
-    display: flex;
-    justify-content: center;
     margin: 0 10px;
-}
-.album {
-    width: 85%;
-    height: 100%;
-    text-align: center;
+    padding: 10px 10px;
     cursor: pointer;
 }
-.album img, .album h4 {
-    margin-bottom: 20px;
-    color: white;
+.album {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 .album > img {
     width: 100%;
-    margin-top: 10px;
+}
+.album > h4 {
+    color: white;
 }
 .album > p {
     color: #7a7568;
